<resources>
    <string name="app_name">miniSASS</string>
    <string name="title_landing">Home</string>
    <string name="title_home">Map</string>
    <string name="title_dashboard">Sites</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="what_is_minisass_heading">What is miniSASS</string>
    <string name="what_is_minisass">
        miniSASS is a simple tool which can be used by anyone to monitor the health of a river.
        You collect a sample of macroinvertebrates (small animals) from the water, and depending on which groups are found, you have a measure of the general river health and water quality in that river.
    </string>
    <string name="how_to_use_the_app">How to use the app?</string>
    <string name="how_to_use_minisass">
        The miniSASS App walthrough video will take you through how to use the app.
    </string>
    <string name="watch_video">Watch Video</string>
    <string name="select_your_identification">Select your identification</string>
    <string-array name="macroinvertebrates">
        <item>Select your identification</item>
        <item>Bugs &amp; Beetles</item>
        <item>Caddisflies</item>
        <item>Damselflies</item>
        <item>Dragonflies</item>
        <item>Flat worms</item>
        <item>Crabs &amp; Shrimps</item>
        <item>Leeches</item>
        <item>Minnow Mayflies</item>
        <item>Other Mayflies</item>
        <item>Snails/Clams/Mussels</item>
        <item>Stoneflies</item>
        <item>Trueflies</item>
        <item>Worms</item>
    </string-array>
    <string-array name="riverTypes">
        <item>Sandy</item>
        <item>Rocky</item>
    </string-array>
    <string-array name="organisationTypes">
        <item>School</item>
        <item>NGO</item>
        <item>Conservancy</item>
        <item>Private Individual</item>
        <item>Government Department</item>
        <item>Consultancy</item>
        <item>University</item>
        <item>Other</item>
    </string-array>
    <string-array name="countries_display_names">
        <item>Aruba</item>
        <item>Afghanistan</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Aland Islands</item>
        <item>Albania</item>
        <item>Andorra</item>
        <item>United Arab Emirates</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>American Samoa</item>
        <item>Antarctica</item>
        <item>French Southern Territories</item>
        <item>Antigua and Barbuda</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Burundi</item>
        <item>Belgium</item>
        <item>Benin</item>
        <item>Bonaire, Sint Eustatius and Saba</item>
        <item>Burkina Faso</item>
        <item>Bangladesh</item>
        <item>Bulgaria</item>
        <item>Bahrain</item>
        <item>Bahamas</item>
        <item>Bosnia and Herzegovina</item>
        <item>Saint Barthelemy</item>
        <item>Belarus</item>
        <item>Belize</item>
        <item>Bermuda</item>
        <item>Bolivia, Plurinational State of</item>
        <item>Brazil</item>
        <item>Barbados</item>
        <item>Brunei Darussalam</item>
        <item>Bhutan</item>
        <item>Bouvet Island</item>
        <item>Botswana</item>
        <item>Central African Republic</item>
        <item>Canada</item>
        <item>Cocos (Keeling) Islands</item>
        <item>Switzerland</item>
        <item>Chile</item>
        <item>China</item>
        <item>Cote d\'Ivoire</item>
        <item>Cameroon</item>
        <item>Congo, The Democratic Republic of the</item>
        <item>Congo</item>
        <item>Cook Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Cabo Verde</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Curacao</item>
        <item>Christmas Island</item>
        <item>Cayman Islands</item>
        <item>Cyprus</item>
        <item>Czechia</item>
        <item>Germany</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Denmark</item>
        <item>Dominican Republic</item>
        <item>Algeria</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>Eritrea</item>
        <item>Western Sahara</item>
        <item>Spain</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Finland</item>
        <item>Fiji</item>
        <item>Falkland Islands (Malvinas)</item>
        <item>France</item>
        <item>Faroe Islands</item>
        <item>Micronesia, Federated States of</item>
        <item>Gabon</item>
        <item>United Kingdom</item>
        <item>Georgia</item>
        <item>Guernsey</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Guinea</item>
        <item>Guadeloupe</item>
        <item>Gambia</item>
        <item>Guinea-Bissau</item>
        <item>Equatorial Guinea</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Greenland</item>
        <item>Guatemala</item>
        <item>French Guiana</item>
        <item>Guam</item>
        <item>Guyana</item>
        <item>Hong Kong</item>
        <item>Heard Island and McDonald Islands</item>
        <item>Honduras</item>
        <item>Croatia</item>
        <item>Haiti</item>
        <item>Hungary</item>
        <item>Indonesia</item>
        <item>Isle of Man</item>
        <item>India</item>
        <item>British Indian Ocean Territory</item>
        <item>Ireland</item>
        <item>Iran, Islamic Republic of</item>
        <item>Iraq</item>
        <item>Iceland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Jersey</item>
        <item>Jordan</item>
        <item>Japan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kyrgyzstan</item>
        <item>Cambodia</item>
        <item>Kiribati</item>
        <item>Saint Kitts and Nevis</item>
        <item>Korea, Republic of</item>
        <item>Kuwait</item>
        <item>Lao People\'s Democratic Republic</item>
        <item>Lebanon</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Saint Lucia</item>
        <item>Liechtenstein</item>
        <item>Sri Lanka</item>
        <item>Lesotho</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Latvia</item>
        <item>Macao</item>
        <item>Saint Martin (French part)</item>
        <item>Morocco</item>
        <item>Monaco</item>
        <item>Moldova, Republic of</item>
        <item>Madagascar</item>
        <item>Maldives</item>
        <item>Mexico</item>
        <item>Marshall Islands</item>
        <item>North Macedonia</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Myanmar</item>
        <item>Montenegro</item>
        <item>Mongolia</item>
        <item>Northern Mariana Islands</item>
        <item>Mozambique</item>
        <item>Mauritania</item>
        <item>Montserrat</item>
        <item>Martinique</item>
        <item>Mauritius</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Mayotte</item>
        <item>Namibia</item>
        <item>New Caledonia</item>
        <item>Niger</item>
        <item>Norfolk Island</item>
        <item>Nigeria</item>
        <item>Nicaragua</item>
        <item>Niue</item>
        <item>Netherlands</item>
        <item>Norway</item>
        <item>Nepal</item>
        <item>Nauru</item>
        <item>New Zealand</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Panama</item>
        <item>Pitcairn</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Palau</item>
        <item>Papua New Guinea</item>
        <item>Poland</item>
        <item>Puerto Rico</item>
        <item>Korea, Democratic People\'s Republic of</item>
        <item>Portugal</item>
        <item>Paraguay</item>
        <item>Palestine, State of</item>
        <item>French Polynesia</item>
        <item>Qatar</item>
        <item>Reunion</item>
        <item>Romania</item>
        <item>Russian Federation</item>
        <item>Rwanda</item>
        <item>Saudi Arabia</item>
        <item>Sudan</item>
        <item>Senegal</item>
        <item>Singapore</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>Saint Helena, Ascension and Tristan da Cunha</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Solomon Islands</item>
        <item>Sierra Leone</item>
        <item>El Salvador</item>
        <item>San Marino</item>
        <item>Somalia</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Serbia</item>
        <item>South Sudan</item>
        <item>Sao Tome and Principe</item>
        <item>Suriname</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Sweden</item>
        <item>Eswatini</item>
        <item>Sint Maarten (Dutch part)</item>
        <item>Seychelles</item>
        <item>Syrian Arab Republic</item>
        <item>Turks and Caicos Islands</item>
        <item>Chad</item>
        <item>Togo</item>
        <item>Thailand</item>
        <item>Tajikistan</item>
        <item>Tokelau</item>
        <item>Turkmenistan</item>
        <item>Timor-Leste</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkiye</item>
        <item>Tuvalu</item>
        <item>Taiwan, Province of China</item>
        <item>Tanzania, United Republic of</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United States Minor Outlying Islands</item>
        <item>Uruguay</item>
        <item>United States</item>
        <item>Uzbekistan</item>
        <item>Holy See (Vatican City State)</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Venezuela, Bolivarian Republic of</item>
        <item>Virgin Islands, British</item>
        <item>Virgin Islands, U.S.</item>
        <item>Viet Nam</item>
        <item>Vanuatu</item>
        <item>Wallis and Futuna</item>
        <item>Samoa</item>
        <item>Yemen</item>
        <item>South Africa</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string name="fill_in_all_fields">Please fill in all required fields</string>
    <string name="could_not_save_online_site">Could not save online site</string>
    <string name="online_site_save">The site will be saved on the miniSASS website the next time you use the app, if you are connected to the internet.</string>
    <string name="could_not_update_online_site">Could not update online site</string>
    <string name="online_site_update">The site will be updated on the miniSASS website the next time you use the app, if you are connected to the internet.</string>
    <string name="upload_images">Upload Images</string>
    <string name="do_you_want_to_upload_images_start">Do you want to upload the assessment images? They are </string>
    <string name="do_you_want_to_upload_images_end"> MB in size.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="could_not_save_online_assessment">Could not save assessment online</string>
    <string name="site_details">Site Details</string>
    <string name="description">Description</string>
    <string name="river_name">River Name</string>
    <string name="updating_site">Updating site</string>
    <string name="required">* Required</string>
    <string name="update_site">Update Site</string>
    <string name="contact_name">Contact Name</string>
    <string name="unknown">Unknown</string>
</resources>