<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_landing"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_landing" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_sites"
        android:icon="@drawable/ic_baseline_assessment_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_baseline_description_24"
        android:title="@string/title_notifications" />

</menu>