<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_landing">

    <fragment
        android:id="@+id/navigation_landing"
        android:name="com.rk.amii.ui.landing.LandingFragment"
        android:label="@string/title_landing"
        tools:layout="@layout/fragment_landing" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rk.amii.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_sites"
        android:name="com.rk.amii.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.rk.amii.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>