<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/idSiteCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp"
    android:backgroundTint="#E6EEF8"
    style="@style/miniSassCardView"
    >

    <ImageView
        android:id="@+id/siteImage"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:scaleType="centerCrop"
        android:src="@color/black"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="85dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/idSiteName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/idCardRiverName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/river_name"
                android:textColor="#808080"
                android:textSize="14dp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="right"
           >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                    <TextView
                        android:id="@+id/idSiteStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:textColor="#808080"
                        android:textSize="14dp"
                        android:paddingTop="12dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="12dp"
                        android:textAlignment="viewEnd"
                        />
                <TextView
                    android:id="@+id/idCrabStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="-3dp"
                    android:textColor="#808080"
                    android:textSize="14dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingRight="12dp"
                    android:textAlignment="viewEnd"
                    android:drawableRight="@drawable/ic_crab_24"
                    android:drawableTint="#808080"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/idEditSite"
                    android:layout_height="20dp"
                    android:layout_width="20dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_baseline_edit_24"
                    app:tint="#808080"
                    />

                <ImageView
                    android:id="@+id/idDeleteSite"
                    android:layout_height="20dp"
                    android:layout_width="20dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_baseline_delete_24"
                    app:tint="#808080"
                    />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>